# stele

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  config.toml.example  flake.nix
.github/workflows/: release.yml
.zed/: rust-analyzer.sh  settings.json
docs/: fns-api.json  issue.md  my_brain_roadmap.md  my_brain_spec.md  my_brain_spec_v2.md  refactor-review.md
install/: cron-guide.md
migrations/: 001_init.sql  002_fts5_vec.sql  003_schema_update.sql
nix/: sources.nix
skills/: DESCRIPTION.md  ROUTING.md  SKILL.md
skills/references/: dream.md  enrich.md  ingest.md  lint.md  media-ingest.md  migrate.md  page-ingest.md  quality.md  query.md  reading.md  setup.md  signal-detector.md  synthesis.md  test-before-bulk.md  think.md  wiki-first.md
skills/stele/: SKILL.md
skills/stele-dream/: SKILL.md
skills/stele-enrich/: SKILL.md
skills/stele-ingest/: SKILL.md
skills/stele-lint/: SKILL.md
skills/stele-media-ingest/: SKILL.md
skills/stele-migrate/: SKILL.md
skills/stele-page-ingest/: SKILL.md
skills/stele-query/: SKILL.md
skills/stele-reading/: SKILL.md
skills/stele-setup/: SKILL.md
skills/stele-signal/: SKILL.md
skills/stele-synthesis/: SKILL.md
skills/stele-think/: SKILL.md
src/: cli.rs  config.rs  lib.rs  main.rs  skills.rs  test_utils.rs
src/fns/: client.rs  mod.rs
src/graph/: mod.rs
src/index/: mod.rs  sqlite.rs
src/mcp/: http.rs  mod.rs  prompts.rs  protocol.rs  resources.rs  server.rs  stdio.rs  transport.rs
src/models/: frontmatter.rs  link.rs  mod.rs  page.rs  search.rs
src/ops/: graph_backlinks.rs  graph_query.rs  handler.rs  maintain.rs  maintain_op.rs  mod.rs  page.rs  page_delete.rs  page_get.rs  page_list.rs  page_put.rs  registry.rs  reindex_op.rs  search.rs  search_op.rs  stats_op.rs  sync.rs  sync_op.rs  tags_list_op.rs  tags_search_op.rs
src/parser/: frontmatter.rs  mod.rs  page.rs  wikilink.rs
src/search/: hybrid.rs  keyword.rs  mod.rs  vector.rs
src/services/: enrich.rs  ingest.rs  maintain.rs  mod.rs  sync.rs  tools.rs
src/storage/: fns.rs  (+2 more)
tests/: integration.rs
(+8 files in other folders)
