[package]
name = "wikiops"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
config = "0.14"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
regex = "1"
pulldown-cmark = "0.10"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
dashmap = "6"
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[profile.release]
lto = true
opt-level = 3
strip = true

[dev-dependencies]
tempfile = "3"
