[package]
name = "stele"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
config = "0.15"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
regex = "1"
pulldown-cmark = "0.13"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
dashmap = "6"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rmcp = { version = "1.7", features = ["server", "transport-io", "transport-streamable-http-server"] }
inventory = "0.3"

[profile.release]
lto = "thin"
opt-level = 3
strip = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
